# jetpack-joyride

./: .gitignore  CMakeLists.txt  export_sprites.sh
assets/aseprite/: jerry.aseprite
modules/animation/: CMakeLists.txt  animation.cpp  animation.h
modules/clock/: CMakeLists.txt  clock.cpp  clock.h
modules/collision/: CMakeLists.txt  aabb.cpp  aabb.h
modules/resource/: CMakeLists.txt  sound.cpp  sound.h  texture.cpp  texture.h
modules/savefile/: CMakeLists.txt  encryption.cpp  encryption.h  savefile.cpp  savefile.h
modules/split/: CMakeLists.txt  split.cpp  split.h
src/: constants.h  game.cpp  game.h  main.cpp  scenario_manager.cpp  scenario_manager.h  scene.cpp  scene.h
src/game_objects/: player.cpp  player.h  rocket.cpp  rocket.h  static_shock.cpp  static_shock.h
